"Removed extraneous pages & added images"

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -7,7 +7,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="mb-5 flex flex-row">
     <div class="text-3xl font-bold">Developer Philosophy</div>
     <div class="grow"></div>
-    <a href="public/pdf/Rust Resume.pdf" class="btn btn-outline ml-5">Resume</a>
+    <a href="public/pdf/Rust_Resume.pdf" class="btn btn-outline ml-5">Resume</a>
   </div>
 
   <div class="mb-10 text-justify">
@@ -57,8 +57,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       title="Full Stack Developer"
       subtitle="From Sep 2021 to Feb 2023 at Plexus Parc, Pittsburg, USA"
     >
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
-    </TimeLineElement>
+          </TimeLineElement>
      
   </div>
 
