--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,9 +19,6 @@ const last_posts = posts.slice(0, 3);
     </div>
     <div class="mt-8">
       <!-- <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a> -->
-      <a href="https://github.com/manuelernestog/astrofy" target="_blank" class="btn btn-outline ml-5">
-        Get This template
-      </a>
     </div>
   </div>
 
@@ -31,8 +28,8 @@ const last_posts = posts.slice(0, 3);
 
   <HorizontalCard
     title="Sonic Sync"
-    img="/post_img.webp"
-    desc="Sonic Sync is a tool designed for theatrical sound design and audio production. It aims to streamline and synchronize the various elements of the design process, including cable layouts, signal flow, and equipment lists. SonicSync provides a unified platform where Sound Designers can manage and integrate there equipment." 
+    img="public/images/Sonic_Sync_Icon.png"
+    desc="Sonic Sync is a tool designed for theatrical sound design and audio production. It aims to streamline and synchronize the various elements of the design process, including cable layouts, signal flow, and equipment lists. Sonic Sync provides a unified platform where Sound Designers can manage and integrate there equipment." 
     url="https://github.com/michaelaboah/SonicSync"
     badge="In Progress"
     tags={["Rust", "TypesScript", "Cross-Platform"]}
@@ -40,12 +37,12 @@ const last_posts = posts.slice(0, 3);
   <div class="divider my-0"></div>
   <HorizontalCard
     title="Sonic Sync Cloud"
-    img="/post_img.webp"
+    img="images/sonic-sync-cloud.jpg"
     desc="The Cloud service that allows users of the Sonic Sync desktop app to download & upload equipment for any and every user."
     badge="In Progress"
     tags={["Go", "MongoDB", "GraphQL"]}
   />
-
+<!--
   <div>
     <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
   </div>
@@ -65,4 +62,6 @@ const last_posts = posts.slice(0, 3);
       </>
     ))
   }
+
+-->
 </BaseLayout>
