"Fixed photo fetching (in public dir '/images/..)"

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -7,7 +7,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="mb-5 flex flex-row">
     <div class="text-3xl font-bold">Developer Philosophy</div>
     <div class="grow"></div>
-    <a href="src/assets/pdf/Rust_Resume.pdf" class="btn btn-outline ml-5">Resume</a>
+    <a href="/pdf/Rust_Resume.pdf" class="btn btn-outline ml-5">Resume</a>
   </div>
 
   <div class="mb-10 text-justify">
