--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,17 +28,17 @@ const last_posts = posts.slice(0, 3);
 
   <HorizontalCard
     title="Sonic Sync"
-    img="../assets/images/Sonic_Sync_Icon.png"
+    img="/images/Sonic_Sync_Icon.png"
     desc="Sonic Sync is a tool designed for theatrical sound design and audio production. It aims to streamline and synchronize the various elements of the design process, including cable layouts, signal flow, and equipment lists. Sonic Sync provides a unified platform where Sound Designers can manage and integrate there equipment." 
     url="https://github.com/michaelaboah/SonicSync"
-    format="jpg"
+    format="png"
     badge="In Progress"
     tags={["Rust", "TypesScript", "Cross-Platform"]}
   />
   <div class="divider my-0"></div>
   <HorizontalCard
     title="Sonic Sync Cloud"
-    img="src/assets/images/sonic-sync-cloud.jpg"
+    img="/images/sonic-sync-cloud.jpg"
     desc="The Cloud service that allows users of the Sonic Sync desktop app to download & upload equipment for any and every user."
     badge="In Progress"
     format="png"
