--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const last_posts = posts.slice(0, 3);
     url="https://github.com/michaelaboah/SonicSync"
     format="png"
     badge="In Progress"
-    tags={["Rust", "TypesScript", "Cross-Platform"]}
+    tags={["Rust", "TypeScript", "Cross-Platform"]}
   />
   <div class="divider my-0"></div>
   <HorizontalCard
