"Completed description for Plexus work experience"

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -57,7 +57,15 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       title="Full Stack Developer"
       subtitle="From Sep 2021 to Feb 2023 at Plexus Parc, Pittsburg, USA"
     >
-          </TimeLineElement>
+      <div class="pl-7 mb-4">
+        <li> Using TypeScript and React as the Frontend for multiple projects. </li>
+        <li> Builing RESTful Web APIs using NodeJs, GraphQL, and SQL Postgres database.</li>
+        <li> Architect, Write, Test, and maintain various web applications with Jest.</li>
+        <li> Incorporating CI/CD with Azure DevOps.</li>
+        <li> Generating GraphQL, queries, mutations, fragments and subscriptions for client side usage.</li>
+      </div>
+
+    </TimeLineElement>
      
   </div>
 
